@@ -1,6 +1,5 @@
 wdm.targetPath=~/.m2/repository/webdriver
 wdm.override=false
-wdm.downloadJustForMySystem=true
 
 wdm.chromeDriverUrl=http://chromedriver.storage.googleapis.com/
 wdm.chromeDriverExport=webdriver.chrome.driver
